@@ -1,3 +1,6 @@
+20 August 2012
++ Add multiplexing test
+
 16 August 2012
 + Add reset_leader test
 
